# EmoVox

./: .env  .gitignore  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  main.py  pyproject.toml  test_azure_speech.py  test_local_storage.py
models/: data_models.py
services/: README_local_storage.md  azure_speech.py  local_storage.py
